# UDShaper

./: CMakeLists.txt  README.md  TODO.txt  UDShaper.RPP  UDShaper.cpp  UDShaper.h  UDShaper.sln  UpgradeLog.htm  color_palette.h  config.h  gui_w32.cpp  gui_x11.cpp  main.cpp  manual.md  plugin.cpp  print_UDShaper_state.py  toolchain_win.cmake
GUI_utils/: CMakeLists.txt  assets.cpp  assets.h  shapeEditor.cpp  shapeEditor.h
UDShaper.xcworkspace/: contents.xcworkspacedata
config/: UDShaper-ios.xcconfig  UDShaper-mac.xcconfig  UDShaper-web.mk  UDShaper-win.props
performance/: eval.py  performance.md  timer.h
projects/: UDShaper-aax.vcxproj  UDShaper-aax.vcxproj.filters  UDShaper-app.vcxproj  UDShaper-app.vcxproj.filters  UDShaper-clap.vcxproj  UDShaper-clap.vcxproj.filters  UDShaper-vst2.vcxproj  UDShaper-vst2.vcxproj.filters  UDShaper-vst3.vcxproj  UDShaper-vst3.vcxproj.filters  UDShaper-wam-controller.mk  UDShaper-wam-processor.mk
resources/: AUv3Framework.h  IPlugAUViewController_vUDShaper.xib  UDShaper-AAX-Info.plist  UDShaper-AU-Info.plist  UDShaper-CLAP-Info.plist  UDShaper-Pages.xml  UDShaper-VST2-Info.plist  UDShaper-VST3-Info.plist  UDShaper-iOS-AUv3-Info.plist  UDShaper-iOS-Info.plist  UDShaper-iOS-LaunchScreen.storyboard  UDShaper-iOS-MainInterface.storyboard  UDShaper-macOS-AUv3-Info.plist  UDShaper-macOS-AUv3Framework-Info.plist  UDShaper-macOS-Info.plist  UDShaper-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
scripts/: makedist-web.sh  postbuild-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  prepare_resources-win.py  (+1 more)
src/: CMakeLists.txt  (+28 more)
(+29 files in other folders)
